--- a/css/main.css
+++ b/css/main.css
@@ -59,5 +59,108 @@
     color: gray;
 }
 
+@media (min-width:506px) {
+    .second-container {
+        display:grid;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 3fr 3fr 1fr auto;
+        grid-gap: 5px;
+        /* Работает но коряво */
+        /* grid-template-areas: "b b b  c c"
+                             "b b b c c"
+                             "b b b c c"
+                             "a a a c c"
+                             "a a a c c"
+                             "a a a c c"
+                             "d d d c c"
+                             "d d d c c"
+                             "e e e f f"
+                             "e e e f f"; */
+    }
 
+    .grid {
+        padding: 10px;
+        min-height: 100px;
+    }
+
+    .first {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        /* grid-area: a; */
+        background-color: orange;
+    }
+
+    .second {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+        /* grid-area: b; */
+        background-color: blueviolet;
+    }
+
+    .third {
+        grid-column: 2 / 3;
+        grid-row: 1 / 5;
+        /* grid-area: c; */
+        background-color: lightseagreen;
+    }
+
+    .fifth {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        /* grid-area: d; */
+        background-color: yellow;
+    }
+
+    .sixth {
+        grid-column: 1 / 2;
+        grid-row: 5 / 6;
+        /* grid-area: e; */
+        background-color: green;
+    }
+
+    .seventh {
+        grid-column: 2 / 3;
+        grid-row: 5 / 6;
+        /* grid-area: f; */
+        background-color: mediumblue;
+    }
+}
+
+@media (min-width:807px) {
+    .second-container{
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 3fr 3fr 1fr auto;
+        grid-gap: 5px;
+    }
+
+    .second {
+        grid-column: 1 / 2;
+        grid-row: 1 / 3;
+    }
+
+    .first {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+    }
+
+    .third {
+        grid-column: 3 / 4;
+        grid-row: 1 / 4;
+    }
+
+    .fifth {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+    }
+
+    .sixth {
+        grid-column: 1 / 3;
+        grid-row: 4 / 5;
+    }
+
+    .seventh {
+        grid-column: 3 / 4;
+        grid-row: 4 / 5;
+}
 
