--- a/css/main.css
+++ b/css/main.css
@@ -164,3 +164,239 @@
         grid-row: 4 / 5;
 }
 
+}
+
+@media (min-width:320px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body {
+        padding: 5px;
+        font-family: 'Open Sans', 'Arial', 'Helvetica', sans-serif;
+    }
+    .container-page {
+        display: grid;
+        width: 100%;
+        grid-gap: 5px;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 3fr 3fr 1fr;
+    }
+
+    header {
+        margin-top: 0;
+        background-color: blue;
+    }
+
+    a {
+        text-decoration: none;
+        color: inherit;
+        transition: all .3s ease-in-out;
+    }
+
+    .logo {
+        display: block;
+        width: 100%;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .logo h1 {
+        padding: ;
+        font-family: 'Overpass Mono', 'Arial', 'Helvetica', monospace, sans-serif;
+        font-size: 30px;
+        font-weight: 700;
+        color: #fff;
+        padding: 5px;
+    }
+
+    .nav {
+        display: block;
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        background-color: orange;
+    }
+
+    .nav a {
+        font-size: 25px;
+        line-height: 50px;
+        padding: 10px;
+        color: rgb(58, 40, 7);
+    }
+
+    .section {
+        grid-column: 1 / 2;
+        grid-row: 3 / 6;
+        color: #fff;
+        background: blue;
+    }
+
+    .section h2 {
+        font-size: 20px;
+        padding: 10px;
+    }
+
+    .section p {
+        font-size: 15px;
+        padding: 10px;
+    }
+
+    .aside {
+        grid-column: 1 / 2;
+        grid-row: 6 / 9;
+        background-color: orange;
+    }
+
+    .aside h2 {
+        padding: 10px;
+    }
+
+    .aside .wrap {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .wrap span {
+        position: relative;
+        font-size: 30px;
+        padding: 10px;
+    }
+
+    @keyframes rotate {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(-360deg);
+        }
+    }
+
+    @keyframes rotate2 {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    @keyframes rotate3 {
+        0% {
+            transform: rotate(0deg);
+        }
+
+        25% {
+            transform: rotate(45deg);
+        }
+
+        45% {
+            transform: rotate(90deg);
+        }
+
+        65% {
+            transform: rotate(180deg);
+        }
+
+        85% {
+            transform: rotate(270deg);
+        }
+        
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    .rotate1 {
+        animation: 4s linear 0s normal none infinite running rotate;
+    }
+
+    .rotate2 {
+        animation: 4s linear 0s normal none infinite running rotate2;
+    }
+    
+    .rotate3 {
+        animation: 4s linear 0s normal none infinite running rotate3;
+    }
+
+    footer {
+        grid-column: 1 / 2;
+        grid-row: 9 / 10;
+        background-color: rgb(70, 70, 243);
+    }
+
+    .photo-logo {
+        width: 40%;
+        height: auto;
+        padding: 10px;
+    }
+
+    .photo-logo a img {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media (min-width:768px) {
+    .container-page {
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: 1fr 1fr 3fr 1fr;
+    }
+
+    .header {
+        grid-column: 1 / 4;
+        grid-row: 1 / 2;
+        align-items: center;
+    }
+
+    .logo h1 {
+        font-size: 50px;
+        padding: 2%;
+    }
+
+    .nav {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        padding: 1%;
+    }
+
+    .nav a {
+        display: inline-block;
+        font-size: 40px;
+        padding: 20px;
+    }
+
+    a:hover {
+        color:lightslategrey;
+    }
+
+    .section {
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+        padding: 20px;
+    }
+
+    .aside {
+        grid-column: 3 / 4;
+        grid-row: 3 / 4;
+    }
+
+    footer {
+        grid-column: 1 / 4;
+        grid-row: 4 / 5;
+    }
+
+    .photo-logo {
+        width: 305px;
+        height: auto;
+    }
+
+    .photo-logo img {
+        width: 100%;
+        height: 100%;
+    }
+}
